1998-12-26  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c (isig): New variable.
	(init_termstate): If it's set, set ISIG flag in c_lflag.
	(options): New option -I/--isig.
	(parse_opt): Make -I set `isig'.
	(boot_script_exec_cmd): Print out args as well as file name.

1998-09-04  Roland McGrath  <roland@baalperazim.frob.com>

	* boot_script.c: Include <string.h> instead of declaring memset here.
	Include <stdlib.h> instead of declaring malloc, free here.

1997-07-08  Miles Bader  <miles@gnu.ai.mit.edu>

	* boot_script.c (prompt_resume_task): Pass more than a single
	character buffer to safe_gets.

Mon Jul  7 16:25:49 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* boot.c: Include <fcntl.h> instead of <fcntlbits.h>.  Suggested
	by Marcus G. Daniels (marcus@cathcart.sysc.pdx.edu).

1997-06-20  Miles Bader  <miles@gnu.ai.mit.edu>

	* boot.c (bootscript): Made global.
	(parse_opt): New function.
	(options, doc, args_doc): New variables.
	(bootscript_args): Now an array.
	(ds_device_open, ds_device_close, ds_device_write,
	ds_device_write_inband, ds_device_read, ds_device_read_inband,
	ds_device_get_status, ds_device_set_status, ds_device_map,
	ds_xxx_device_set_filter, ds_xxx_device_get_status,
	ds_xxx_device_set_status, ds_device_set_filter):
	Handle "pseudo-root" device.
	(pseudo_root, root_store): New variables.
	(main): Use argp to parse args, and implement the pseudo-root device.
	Include <argp.h> & <hurd/store.h>
	* Makefile (HURDLIBS): Include libstore & libshouldbeinlibc.

Thu Apr 10 11:53:57 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* boot.c: Don't include varargs.h.
 	(set_mach_stack_args): Use stdarg instead of vararg.

Mon Mar 17 13:12:45 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* boot_script.c (boot_script_parse_line): Don't print gratuitous
	output noise.

Thu Sep 12 16:28:47 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(boot): Delete special depedencies.
