@@ -1,3 +1,7 @@
+Tue Feb 16 05:06:12 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* boot.c (S_io_revoke): New (unsupported) routine.
+
 1998-12-26  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* boot.c (isig): New variable.
